# kaldi

src/: CMakeLists.txt
